<resources>
    <string name="app_name">Random Episode Tool</string>

    <string name="title">title</string>
    <string name="description">description</string>
    <string name="select_show">Select Show</string>
    <string name="random_show">Random Show</string>
    <string name="edit_database">Edit database</string>
    <string name="season_episode_number">Season #, Episode #</string>
    <string name="random_episode">Random Episode</string>
    <string name="options">Options</string>
    <string name="season">Season </string>
    <string name="season__number_edit">Season </string>
    <string name="_episode_number_edit">, Episode </string>
    <string name="pound">#</string>
    <string name="add">add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="add_episode">Add episode</string>
    <string name="add_season">Add Season</string>

</resources>
