<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar"
        android:background="@color/bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/show_title"
                style="@style/ShowText"
                android:maxWidth="200dp"
                android:minWidth="@dimen/edit_min_width"
                android:text="@string/title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_season"
                style="@style/EditButton"
                android:text="@string/add_season" />


            <Button
                android:id="@+id/delete_season"
                style="@style/DeleteButton"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar"
        android:background="@color/bar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/season_recycler_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar"
        android:background="@color/bar" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EpisodeText"
            android:text="@string/season__number_edit" />

        <EditText
            android:id="@+id/season_number"
            style="@style/EpisodeText"
            android:inputType="numberDecimal"
            android:text="@string/pound" />

        <TextView
            style="@style/EpisodeText"
            android:text="@string/_episode_number_edit" />

        <EditText
            android:id="@+id/episode_number"
            style="@style/EpisodeText"
            android:inputType="numberDecimal"
            android:text="@string/pound" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/episode_title"
                style="@style/EpisodeText"
                android:minWidth="@dimen/edit_min_width"
                android:text="@string/title" />

            <EditText
                android:id="@+id/episode_description"
                style="@style/EpisodeText"
                android:minWidth="@dimen/edit_min_width"
                android:text="@string/description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_episode"
                style="@style/EditButton"
                android:text="@string/add_episode" />


            <Button
                android:id="@+id/delete_episode"
                style="@style/DeleteButton"
                android:text="@string/delete" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>